<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2017 Rizky Kharisma (@ngengs)
  ~
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_group_notification">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="subscribe_news"
            android:summaryOff="@string/settings_summary_news_unsubscribe"
            android:summaryOn="@string/settings_summary_news_subscribe"
            android:title="@string/settings_title_news_subscribe"
            />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="subscribe_announcement"
            android:summaryOff="@string/settings_summary_announcement_unsubscribe"
            android:summaryOn="@string/settings_summary_announcement_subscribe"
            android:title="@string/settings_title_announcmenet_subscribe"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_group_browser">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="in_app_browser"
            android:summaryOff="@string/settings_summary_app_browser_off"
            android:summaryOn="@string/settings_summary_app_browser_on"
            android:title="@string/settings_title_app_browser"
            />
    </PreferenceCategory>

</PreferenceScreen>